--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/optiscan
-spring.datasource.username=root
-spring.datasource.password=q1w2e3
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=create
+# spring.datasource.url=jdbc:mysql://localhost:3306/demo
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo
+spring.datasource.username=demo
+spring.datasource.password=demo
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
